Revert "Sprint 7 solution in file manager"